# example-async-rpc-py

./: README.md  hello.py  pyproject.toml  resonate.db
chain/: README.md  pyproject.toml
chain/src/: service_bar.py  service_baz.py  service_foo.py
chain/src/chain/: __init__.py
chain/src/chain/service_bar/: __init__.py
chain/src/chain/service_baz/: __init__.py
chain/src/chain/service_foo/: __init__.py
detached/: README.md  pyproject.toml
detached/src/detached/: __init__.py
fan_out/: README.md  pyproject.toml
fan_out/src/: service_bar.py  service_baz.py
fan_out/src/fan_out/: __init__.py
fan_out/src/fan_out/service_foo/: __init__.py
fire_and_forget/: README.md  pyproject.toml
fire_and_forget/src/: service_foo.py
fire_and_forget/src/fire_and_forget/: __init__.py
fire_and_forget/src/fire_and_forget/service_foo/: __init__.py
src/: gateway.py  service_a.py  service_b.py  service_c.py  service_d.py  service_e.py  service_f.py  service_g.py  service_h.py  service_i.py
src/async_rpc/: __init__.py
src/async_rpc/service_bar/: __init__.py
src/async_rpc/service_baz/: __init__.py
src/async_rpc/service_foo/: __init__.py
