[project]
name = "chain"
version = "0.1.0"
description = "Chain request flow Async RPC example app."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "resonate-sdk==0.4.6",
]

[project.scripts]
foo = "chain.service_foo:main"
bar = "chain.service_bar:main"
baz = "chain.service_baz:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
